1.20.4 Fixes and Refactors